# keybigen

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  keybinding.rs  main.rs  transform.rs
