[package]
name = "keybigen"
version = "0.1.1"
authors = ["Aspirin"]
edition = "2021"
license = "MIT"
description = "generate key bindings for alacritty"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"]}
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.1"
